force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/leaseworks__Sub_Components_LLPs__c.object-meta.xml
<CustomObject>
    <description>Life Limited Parts (LLPs) within the Engine Assemblies play a crucial role in calculating the remaining life of an engine, serving as the lowest LLP limiter for replacement. Although LLPs can be pre-defined using the Engine Template feature, serial numbers will not be included initially. For this reason, it is advised to begin with an LLP data load and subsequently link to the Engine Template for initial setup. It&apos;s important to note that LLPs for Auxiliary Power Units (APUs), Landing Gear, and Propellers are not supported by default.
[MODULE: Asset]
[LOAD: Yes]
[PREREQUISITES: Assemblies]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Life Limited Part (LLP)</label>
    <nameField>
        <label>LLP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Life Limited Parts (LLPs)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>