force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Actual_2nd_Engine_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Actual_2nd_Engine_Removal_Date__c</fullName>
    <formula>null</formula>
    <inlineHelpText>Based on Engine PR and Actual Engine Removal Date</inlineHelpText>
    <label>Z_Unused_1219_Est. 2 Engine Removal Date</label>
    <type>Date</type>
</CustomField>