force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Actual_Engine_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Actual_Engine_Removal_Date__c</fullName>
    <formula>null</formula>
    <inlineHelpText>Engine Assembly Date. The earliest of two estimated dates: Est. Next Event Date or Est. Lowest Limiter LLP removal Date</inlineHelpText>
    <label>Z_Unused_1219_Est. Engine Removal Date</label>
    <type>Date</type>
</CustomField>