force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Actual_LLP_Removal__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Actual_LLP_Removal__c</fullName>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_1219_Actual LLP Removal</label>
    <type>Date</type>
</CustomField>