force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Average_Cycles__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Average_Cycles__c</fullName>
    <formula>leaseworks__Constituent_Assembly__r.leaseworks__Average_Monthly_Utilization_Cycles__c</formula>
    <inlineHelpText>Average Monthly Utilization Cycles</inlineHelpText>
    <label>Average Cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>