force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Constituent_Assembly__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Constituent_Assembly__c</fullName>
    <label>Assembly</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipLabel>Life Limited Parts (LLPs)</relationshipLabel>
    <relationshipName>Sub_Components_LLPs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>