force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__CSN_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN_New__c</fullName>
    <inlineHelpText>Cycles Since New</inlineHelpText>
    <label>CSN</label>
    <summarizedField>leaseworks__Thrust_Setting__c.leaseworks__Cycle_Used__c</summarizedField>
    <summaryForeignKey>leaseworks__Thrust_Setting__c.leaseworks__Life_Limited_Part__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>