force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Cycle_5_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cycle_5_Value__c</fullName>
    <label>_Cycles V2527-A5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>