force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Cycles_Limit_4__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cycles_Limit_4__c</fullName>
    <label>_Cycles Limit V2524-A5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>