force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Cycles_Used__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cycles_Used__c</fullName>
    <label>Cycles Used</label>
    <summarizedField>leaseworks__Thrust_Setting__c.leaseworks__Cycle_Used__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Thrust_Setting__c.leaseworks__Current_Thrust__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Thrust_Setting__c.leaseworks__Life_Limited_Part__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>