force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Disk_Stage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Disk_Stage__c</fullName>
    <label>Disk Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>