force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Exclude_From_Limiter_Calculation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Exclude_From_Limiter_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this part be excluded while computing the lowest limiter component?</description>
    <inlineHelpText>Should this part be excluded while computing the lowest limiter component?</inlineHelpText>
    <label>Exclude From Limiter Calculation?</label>
    <type>Checkbox</type>
</CustomField>