force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Hours_Remaining__c</fullName>
    <formula>leaseworks__Life_Limit_Hours__c - leaseworks__TSN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>