force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Life_Limit_Cycles__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Life_Limit_Cycles__c</fullName>
    <label>_Life Limit (Cycles)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>