force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Life_Limit_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Life_Limit_Hours__c</fullName>
    <label>Life Limit (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>