force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__MVA_FL__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MVA_FL__c</fullName>
    <formula>if(leaseworks__Cycles_Remaining_TS__c * leaseworks__Cost_Per_Cycle__c&gt;0,(-1)*leaseworks__Cycles_Remaining_TS__c * leaseworks__Cost_Per_Cycle__c,leaseworks__Cycles_Remaining_TS__c * leaseworks__Cost_Per_Cycle__c)</formula>
    <inlineHelpText>Maintenance Value Adjustment Full-Life of this Life Limited Part equals to Cost Per Cycle * Cycles Remaining(Always Negative)</inlineHelpText>
    <label>MVA FL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>