force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Next_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Next_Removal_Date__c</fullName>
    <formula>leaseworks__Constituent_Assembly__r.leaseworks__Attached_Aircraft__r.leaseworks__Utilization_Current_As_Of__c + (( leaseworks__Cycles_Remaining_TS__c / leaseworks__Constituent_Assembly__r.leaseworks__Average_Monthly_Utilization_Cycles__c)*30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. LLP Removal Date</label>
    <type>Date</type>
</CustomField>