force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Override_Life_Limit_Cycle__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Override_Life_Limit_Cycle__c</fullName>
    <description>This field is used to set up initial LLP records through data loader or manually LLP creation</description>
    <inlineHelpText>This field is used to set up initial LLP records through data loader or manually LLP creation</inlineHelpText>
    <label>Data Set up Life Limit Cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>