force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Replacement_Cost_As_of_Last_Approved_UR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Replacement_Cost_As_of_Last_Approved_UR__c</fullName>
    <description>The replacement cost as of last utilization that was APPROVED. This takes into account any escalations and cost reset dates.</description>
    <inlineHelpText>The replacement cost as of last utilization that was APPROVED. This takes into account any escalations and cost reset dates.</inlineHelpText>
    <label>Z_Unused_1219_Comp Value To Full Life</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>