force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Replacement_Cost_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Replacement_Cost_Reset_Date__c</fullName>
    <description>Catalogue price escalation is applied from the Date</description>
    <inlineHelpText>Catalogue price escalation is applied from the Date</inlineHelpText>
    <label>Catalog Price Reset Date</label>
    <type>Date</type>
</CustomField>