force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Replacement_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Replacement_Date__c</fullName>
    <label>Replacement Date (SV)</label>
    <type>Date</type>
</CustomField>