force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__SC_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__SC_Number__c</fullName>
    <displayFormat>SC-{0000}</displayFormat>
    <inlineHelpText>LLP unique identification number</inlineHelpText>
    <label>LLP ID</label>
    <type>AutoNumber</type>
</CustomField>