force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Sort_Order__c</fullName>
    <inlineHelpText>Number that may be used for sorting all LLPs in an order preferred by the user. For Reports, Lists, Spec sheets and Disk sheets.</inlineHelpText>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>