force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Total_Event_Payout__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Event_Payout__c</fullName>
    <label>_Total Event Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>