force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__TSLV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSLV__c</fullName>
    <inlineHelpText>Time Since Last Shop Visit</inlineHelpText>
    <label>TSLSV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>