force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__TSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSN__c</fullName>
    <description>Time since new</description>
    <inlineHelpText>Time Since New</inlineHelpText>
    <label>TSN(Internal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>