force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Y_Hidden_Actual_LLP_Removal__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Actual_LLP_Removal__c</fullName>
    <label>Z_Unused_1219_ Actual LLP Removal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>