force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Y_Hidden_Cumulative_NMR_For_Rollup__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Cumulative_NMR_For_Rollup__c</fullName>
    <description>Since rollup is not allowed on Formula fields. This field will be set using a WF.</description>
    <label>_Cumulative NMR For Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>