force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Y_Hidden_MR_LLP_Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_MR_LLP_Utilization__c</fullName>
    <description>Total LLP MR based on LLP Utilization</description>
    <label>Z_Unused_1219_ MR (LLP Utilization)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>