force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Y_Hidden_Part_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Part_Name__c</fullName>
    <label>_Part Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>