force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/fields/leaseworks__Y_Hidden_Thrust_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Thrust_Id__c</fullName>
    <label>_Thrust Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>