force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/recordTypes/leaseworks__CFM56_LLPs.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__CFM56_LLPs</fullName>
    <active>false</active>
    <description>CFM56 LLPs</description>
    <label>Engine CFM56</label>
</RecordType>