force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/recordTypes/leaseworks__Engine_V2500.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Engine_V2500</fullName>
    <active>false</active>
    <description>V2500 Type Engines</description>
    <label>Engine V2500</label>
</RecordType>