force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/recordTypes/leaseworks__Non_CFM56_LLPs.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Non_CFM56_LLPs</fullName>
    <active>true</active>
    <description>Generic Engine LLPs</description>
    <label>Engine</label>
</RecordType>