force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/recordTypes/leaseworks__Propeller.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Propeller</fullName>
    <active>true</active>
    <description>Propellers</description>
    <label>Propeller</label>
</RecordType>