force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/validationRules/leaseworks__LL_Cycles_must_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__LL_Cycles_must_be_greater_than_zero</fullName>
    <active>false</active>
    <description>LL Cycles must be greater than zero.</description>
    <errorConditionFormula>false /*Life_Limit_Cycles__c &lt;1*/</errorConditionFormula>
    <errorDisplayField>leaseworks__Life_Limit_Cycles__c</errorDisplayField>
    <errorMessage>Life Limit Cycles must be greater than zero.</errorMessage>
</ValidationRule>