force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/validationRules/leaseworks__Sort_order_must_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Sort_order_must_be_greater_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Sort_Order__c &lt;= 0</errorConditionFormula>
    <errorMessage>Sorting order must be greater than 0 and less than 100.</errorMessage>
</ValidationRule>