force-app/main/default/objects/leaseworks__Sub_Components_LLPs__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Part_Number__c</columns>
    <columns>leaseworks__Serial_Number__c</columns>
    <columns>leaseworks__Life_Limit__c</columns>
    <columns>leaseworks__Cycles_Remaining_TS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>